# subscription-tracker-ai-mcp

./: .mcp.json  README.md  glama.json  package.json  pyproject.toml  server.py  smithery.yaml
.well-known/mcp/: server-card.json
subscription_tracker_ai_mcp/: server.py
