[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subscription-tracker-ai-mcp"
version = "0.1.0"
description = "Track recurring subscriptions, calculate monthly and yearly totals, and identify upcoming renewals."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
]

[project.scripts]
subscription_tracker_ai_mcp = "subscription_tracker_ai_mcp.server:main"
